--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#00615C",
         "activityBarBadge.foreground": "#080060",
         "activityBarBadge.background": "#ABA3FF",
-        "statusBar.foreground": "#FFD3A3",
-        "statusBar.background": "#895113",
-        "statusBarItem.hoverBackground": "#50480D",
-        "statusBarItem.remoteForeground": "#D3F482",
-        "statusBarItem.remoteBackground": "#507100",
+        "statusBar.foreground": "#FFD4A1",
+        "statusBar.background": "#885212",
+        "statusBarItem.hoverBackground": "#4F490D",
+        "statusBarItem.remoteForeground": "#D2F582",
+        "statusBarItem.remoteBackground": "#4F7100",
         "statusBar.debuggingForeground": "#000000",
-        "statusBar.debuggingBackground": "#BF874A"
+        "statusBar.debuggingBackground": "#BE8849"
     }
 }
