--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#00615C",
         "activityBarBadge.foreground": "#080060",
         "activityBarBadge.background": "#ABA3FF",
-        "statusBar.foreground": "#FFD4A1",
-        "statusBar.background": "#885212",
-        "statusBarItem.hoverBackground": "#4F490D",
-        "statusBarItem.remoteForeground": "#D2F582",
-        "statusBarItem.remoteBackground": "#4F7100",
+        "statusBar.foreground": "#FFD797",
+        "statusBar.background": "#82550E",
+        "statusBarItem.hoverBackground": "#4B4B0C",
+        "statusBarItem.remoteForeground": "#CCF883",
+        "statusBarItem.remoteBackground": "#497500",
         "statusBar.debuggingForeground": "#000000",
-        "statusBar.debuggingBackground": "#BE8849"
+        "statusBar.debuggingBackground": "#B98C44"
     }
 }
