--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "eject": "node react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
